--- a/themes/indigo-wine/style.css
+++ b/themes/indigo-wine/style.css
@@ -3492,6 +3492,26 @@ body .woocommerce form .form-row .button {
 .hb-main-content .woocommerce .shop_table .actions {
   padding-bottom: 0 !important;
 }
+.element-row .woocommerce .shop_table .product-quantity .quantity,
+.hb-main-content .woocommerce .shop_table .product-quantity .quantity {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.element-row .woocommerce .shop_table .product-quantity input.qty,
+.hb-main-content .woocommerce .shop_table .product-quantity input.qty {
+  color: #022c4c;
+  font-weight: 600;
+}
 .element-row .woocommerce .hb-update-cart,
 .hb-main-content .woocommerce .hb-update-cart {
   display: none !important;
@@ -3807,25 +3827,6 @@ body .woocommerce form .form-row .button {
 }
 #subscribe-modal .woocommerce .shop_table.shop_table .product-thumbnail img {
   margin: 0 auto;
-}
-#subscribe-modal .woocommerce .shop_table.shop_table .product-quantity .quantity {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-#subscribe-modal .woocommerce .shop_table.shop_table .product-quantity input.qty {
-  background-color: transparent;
-  color: #022c4c;
-  font-weight: 600;
 }
 #subscribe-modal .woocommerce .shop_table.shop_table .actions {
   display: none;
